ido_sdk_flutter/ido_sdk/protocol_sdk/protocol_ffi/ios/protocol_c.framework/Headers/ido_protocol_public_interface.h

/**
 * @brief:获取v2同步运动状态
 * @return: 返回同步状态
 * {false:未开启同步 true:已开启同步}
 */
extern bool getSyncV2ActivityDataStatus(void);
/**
 * @brief 开始同步v2GPS数据
 * @return SUCCESS(0) 成功
 */
extern int startSyncV2GpsData(void);
/**
 * @brief 停止同步GPS数据
 * @return SUCCESS(0) : 成功
 */
extern int stopSyncV2GpsData(void);
/**
 * @brief 获取v2同步GPS状态
 * @return 返回同步状态
 * {false:未开启同步 true:已开启同步}
 */
extern bool getSyncV2GpsDataStatus(void);
// ------------------------------ v3同步健康 ------------------------------
/**
 * @brief 解绑清除v3缓存健康数据
 * @return SUCCESS(0) 成功
 */
extern int unBindClearV3HealthData(void);
/**
 * @brief 开始同步v3健康数据
 * @return SUCCESS(0)成功
 * */
extern int startSyncV3HealthData(void);
/**
 * @brief app每半个小时主动更新 开始同步V3数据，睡眠数据不返回
 * @return SUCCESS(0) 成功
 * */
extern int startAutomaticSyncV3HealthData(void);
/**
 * @brief 停止同步v3健康数据
 * @return SUCCESS(0)成功
 * */
extern int stopSyncV3HealthData(void);
/**
 * @brief:手动停止快速同步配置
 * @return int SUCCESS(0)成功
 * */
extern int ProtocolSyncConfigStop(void);
// ------------------------------ 数据传输接口 ------------------------------
/**
 * @brief 开始传输数据
 * @return
 *   SUCCESS(0) : 成功
 */
extern int tranDataStart(void);
/**
 * @brief 开始传输数据, 且设置续传次数
 * @param times 续传次数
 * @return
 *   SUCCESS(0) : 成功
 */
extern int tranDataStartWithTryTime(int times);
/**
 * @brief:停止传输数据(无效,使用tranDataManualStop)
 * @return
 *   SUCCESS:成功
 */
extern int tranDataStop(void);
/**
 * @brief:手动停止传输数据
 * @return:
 *   SUCCESS:成功
 */
extern int tranDataManualStop(void);
/**
 * @brief:获取传输状态
 * @return:
 * {true(1) : 传输已开启
 * false(0) : 传输未开启}
 */
extern bool tranDataisStart(void);
/**
 * @brief 配置文件传输数据 version_date:1.0.1.1后取消该方法，使用tranDataSetBuffByPath配置文件
 * @param data 文件的字节流
 * @param dataType 文件类型
 * @param dataLen 字节流大小
 * {0 无效
 * 1 分区表
 * 2 apgs文件
 * 3 gps固件}
 * @param fileName 文件名+后缀, 注:文件名可以是空但是后缀不能为空(排除掉某些固定名称的文件例如:EPO.DAT)
 * @param compressionType 压缩类型
 * {0 为不适用压缩
 * 1 为zlib压缩
 * 2 为fastlz压缩}
 * @param  oriSize 压缩前文件大小
 * {目前对表盘文件有效，表示没有压缩前的文件大小，即iwf文件大小}
 * 如果需要传递文件名 ，dataType需要使用0xff,如果是传递agps，两个分部填""和0就可以了
 * @return SUCCESS(0) 成功
 */
extern int tranDataSetBuff(char *data,int dataType,int dataLen,char *fileName,int compressionType,int oriSize);
/**
 * @brief 配置文件传输数据，输入文件路径由C库读取文件数据
 * @param dataType 文件类型
 * {0 无效
 * 1 分区表
 * 2 apgs文件
 * 3 gps固件}
 * @param srcPath 素材文件路径   最大4096字节
 * @param dstName 目标文件名+后缀, 注:文件名可以是空但是后缀不能为空(排除掉某些固定名称的文件例如:EPO.DAT) 最大256字节
 * @param compressionType 压缩类型
 * {0 为不适用压缩
 * 1 为zlib压缩
 * 2 为fastlz压缩}
 * @param  oriSize 压缩前文件大小
 * {目前对表盘文件有效，表示没有压缩前的文件大小，即iwf文件大小}
 * 如果需要传递文件名 ，dataType需要使用0xff,如果是传递agps，两个分部填""和0就可以了
 * @return SUCCESS(0) 成功
 */
extern int tranDataSetBuffByPath(int dataType,char *srcPath,char *dstName,int compressionType,int oriSize);
/**
 * @brief 设置PRN,接收num包通知一次, 用来调节速度和可靠性之间的平衡
 * @param num  app每发num包, 固件回应一次
 * @return:
 *   SUCCESS(0) : 成功
 */
extern int tranDataSetPRN(int num);
// ------------------------------ SPP文件传输功能 ------------------------------
/**
 * @brief 开始传输数据
 * @return
 *   SUCCESS(0) : 成功
 */
extern int sppTranDataStart(void);
/**
 * @brief 开始传输数据, 且设置续传次数
 * @param times 续传次数
 * @return
 *   SUCCESS(0) : 成功
 */
extern int sppTranDataStartWithTryTime(int times);
/**
 * @brief:停止spp传输数据(无效,使用sppTranDataManualStop)
 * @return
 *   SUCCESS:成功
 */
extern int sppTranDataStop(void);
/**
 * @brief:手动停止spp传输数据
 * @return:
 *   SUCCESS:成功
 */
extern int sppTranDataManualStop(void);
/**
 * @brief:获取传输状态
 * @return:
 * {true(1) : 传输已开启
 * false(0) : 传输未开启}
 */
extern bool sppTranDataisStart(void);
/**
 * @brief SPP设置文件传输Buff version_date:1.0.1.1后取消该方法，使用sppTranDataSetBuffByPath配置文件
 * @param data 文件的字节流
 * @param dataType 文件类型
 * @param dataLen 字节流大小
 * {0 无效
 * 1 分区表
 * 2 apgs文件
 * 3 gps固件}
 * @param fileName 文件名+后缀, 注:文件名可以是空但是后缀不能为空(排除掉某些固定名称的文件例如:EPO.DAT)
 * @param compressionType 压缩类型
 * {0 为不适用压缩
 * 1 为zlib压缩
 * 2 为fastlz压缩}
 * @param  oriSize 压缩前文件大小
 * {目前对表盘文件有效，表示没有压缩前的文件大小，即iwf文件大小}
 * 如果需要传递文件名 ，dataType需要使用0xff,如果是传递agps，两个分部填""和0就可以了
 * @return SUCCESS(0) 成功
 */
extern int sppTranDataSetBuff(char *data,int dataType,int dataLen,char *fileName,int compressionType,int oriSize);