ido_sdk_flutter/ido_sdk/protocol_sdk/protocol_ffi/lib/src/ffi/ido_protocol_ffi.g.dart


  /// @brief:获取v2同步运动状态
  /// @return: 返回同步状态
  /// {false:未开启同步 true:已开启同步}
  int getSyncV2ActivityDataStatus() {
    return _getSyncV2ActivityDataStatus();
  }

  late final _getSyncV2ActivityDataStatusPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'getSyncV2ActivityDataStatus');
  late final _getSyncV2ActivityDataStatus =
      _getSyncV2ActivityDataStatusPtr.asFunction<int Function()>();

  /// @brief 开始同步v2GPS数据
  /// @return SUCCESS(0) 成功
  int startSyncV2GpsData() {
    return _startSyncV2GpsData();
  }

  late final _startSyncV2GpsDataPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('startSyncV2GpsData');
  late final _startSyncV2GpsData =
      _startSyncV2GpsDataPtr.asFunction<int Function()>();

  /// @brief 停止同步GPS数据
  /// @return SUCCESS(0) : 成功
  int stopSyncV2GpsData() {
    return _stopSyncV2GpsData();
  }

  late final _stopSyncV2GpsDataPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('stopSyncV2GpsData');
  late final _stopSyncV2GpsData =
      _stopSyncV2GpsDataPtr.asFunction<int Function()>();

  /// @brief 获取v2同步GPS状态
  /// @return 返回同步状态
  /// {false:未开启同步 true:已开启同步}
  int getSyncV2GpsDataStatus() {
    return _getSyncV2GpsDataStatus();
  }

  late final _getSyncV2GpsDataStatusPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('getSyncV2GpsDataStatus');
  late final _getSyncV2GpsDataStatus =
      _getSyncV2GpsDataStatusPtr.asFunction<int Function()>();

  /// ------------------------------ v3同步健康 ------------------------------
  /// /**
  ///  * @brief 解绑清除v3缓存健康数据
  ///  * @return SUCCESS(0) 成功
  ///  */
  int unBindClearV3HealthData() {
    return _unBindClearV3HealthData();
  }

  late final _unBindClearV3HealthDataPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'unBindClearV3HealthData');
  late final _unBindClearV3HealthData =
      _unBindClearV3HealthDataPtr.asFunction<int Function()>();

  /// @brief 开始同步v3健康数据
  /// @return SUCCESS(0)成功
  int startSyncV3HealthData() {
    return _startSyncV3HealthData();
  }

  late final _startSyncV3HealthDataPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('startSyncV3HealthData');
  late final _startSyncV3HealthData =
      _startSyncV3HealthDataPtr.asFunction<int Function()>();

  /// @brief app每半个小时主动更新 开始同步V3数据，睡眠数据不返回
  /// @return SUCCESS(0) 成功
  int startAutomaticSyncV3HealthData() {
    return _startAutomaticSyncV3HealthData();
  }

  late final _startAutomaticSyncV3HealthDataPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'startAutomaticSyncV3HealthData');
  late final _startAutomaticSyncV3HealthData =
      _startAutomaticSyncV3HealthDataPtr.asFunction<int Function()>();

  /// @brief 停止同步v3健康数据
  /// @return SUCCESS(0)成功
  int stopSyncV3HealthData() {
    return _stopSyncV3HealthData();
  }

  late final _stopSyncV3HealthDataPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('stopSyncV3HealthData');
  late final _stopSyncV3HealthData =
      _stopSyncV3HealthDataPtr.asFunction<int Function()>();

  /// @brief:手动停止快速同步配置
  /// @return int SUCCESS(0)成功
  int ProtocolSyncConfigStop() {
    return _ProtocolSyncConfigStop();
  }

  late final _ProtocolSyncConfigStopPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('ProtocolSyncConfigStop');
  late final _ProtocolSyncConfigStop =
      _ProtocolSyncConfigStopPtr.asFunction<int Function()>();

  /// ------------------------------ 数据传输接口 ------------------------------
  /// /**
  ///  * @brief 开始传输数据
  ///  * @return
  ///  *   SUCCESS(0) : 成功
  ///  */
  int tranDataStart() {
    return _tranDataStart();
  }

  late final _tranDataStartPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('tranDataStart');
  late final _tranDataStart = _tranDataStartPtr.asFunction<int Function()>();

  /// @brief 开始传输数据, 且设置续传次数
  /// @param times 续传次数
  /// @return
  /// SUCCESS(0) : 成功
  int tranDataStartWithTryTime(
    int times,
  ) {
    return _tranDataStartWithTryTime(
      times,
    );
  }

  late final _tranDataStartWithTryTimePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
          'tranDataStartWithTryTime');
  late final _tranDataStartWithTryTime =
      _tranDataStartWithTryTimePtr.asFunction<int Function(int)>();

  /// @brief:停止传输数据(无效,使用tranDataManualStop)
  /// @return
  /// SUCCESS:成功
  int tranDataStop() {
    return _tranDataStop();
  }

  late final _tranDataStopPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('tranDataStop');
  late final _tranDataStop = _tranDataStopPtr.asFunction<int Function()>();

  /// @brief:手动停止传输数据
  /// @return:
  /// SUCCESS:成功
  int tranDataManualStop() {
    return _tranDataManualStop();
  }

  late final _tranDataManualStopPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('tranDataManualStop');
  late final _tranDataManualStop =
      _tranDataManualStopPtr.asFunction<int Function()>();

  /// @brief:获取传输状态
  /// @return:
  /// {true(1) : 传输已开启
  /// false(0) : 传输未开启}
  int tranDataisStart() {
    return _tranDataisStart();
  }

  late final _tranDataisStartPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('tranDataisStart');
  late final _tranDataisStart =
      _tranDataisStartPtr.asFunction<int Function()>();

  /// @brief 配置文件传输数据 version_date:1.0.1.1后取消该方法，使用tranDataSetBuffByPath配置文件
  /// @param data 文件的字节流
  /// @param dataType 文件类型
  /// @param dataLen 字节流大小
  /// {0 无效
  /// 1 分区表
  /// 2 apgs文件
  /// 3 gps固件}
  /// @param fileName 文件名+后缀, 注:文件名可以是空但是后缀不能为空(排除掉某些固定名称的文件例如:EPO.DAT)
  /// @param compressionType 压缩类型
  /// {0 为不适用压缩
  /// 1 为zlib压缩
  /// 2 为fastlz压缩}
  /// @param  oriSize 压缩前文件大小
  /// {目前对表盘文件有效，表示没有压缩前的文件大小，即iwf文件大小}
  /// 如果需要传递文件名 ，dataType需要使用0xff,如果是传递agps，两个分部填""和0就可以了
  /// @return SUCCESS(0) 成功
  int tranDataSetBuff(
    ffi.Pointer<ffi.Char> data,
    int dataType,
    int dataLen,
    ffi.Pointer<ffi.Char> fileName,
    int compressionType,
    int oriSize,
  ) {
    return _tranDataSetBuff(
      data,
      dataType,
      dataLen,
      fileName,
      compressionType,
      oriSize,
    );
  }

  late final _tranDataSetBuffPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Int, ffi.Int,
              ffi.Pointer<ffi.Char>, ffi.Int, ffi.Int)>>('tranDataSetBuff');
  late final _tranDataSetBuff = _tranDataSetBuffPtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Char>, int, int, ffi.Pointer<ffi.Char>, int, int)>();

  /// @brief 配置文件传输数据，输入文件路径由C库读取文件数据
  /// @param dataType 文件类型
  /// {0 无效
  /// 1 分区表
  /// 2 apgs文件
  /// 3 gps固件}
  /// @param srcPath 素材文件路径   最大4096字节
  /// @param dstName 目标文件名+后缀, 注:文件名可以是空但是后缀不能为空(排除掉某些固定名称的文件例如:EPO.DAT) 最大256字节
  /// @param compressionType 压缩类型
  /// {0 为不适用压缩
  /// 1 为zlib压缩
  /// 2 为fastlz压缩}
  /// @param  oriSize 压缩前文件大小
  /// {目前对表盘文件有效，表示没有压缩前的文件大小，即iwf文件大小}
  /// 如果需要传递文件名 ，dataType需要使用0xff,如果是传递agps，两个分部填""和0就可以了
  /// @return SUCCESS(0) 成功
  int tranDataSetBuffByPath(
    int dataType,
    ffi.Pointer<ffi.Char> srcPath,
    ffi.Pointer<ffi.Char> dstName,
    int compressionType,
    int oriSize,
  ) {
    return _tranDataSetBuffByPath(
      dataType,
      srcPath,
      dstName,
      compressionType,
      oriSize,
    );
  }

  late final _tranDataSetBuffByPathPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Int,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Int)>>('tranDataSetBuffByPath');
  late final _tranDataSetBuffByPath = _tranDataSetBuffByPathPtr.asFunction<
      int Function(
          int, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int, int)>();

  /// @brief 设置PRN,接收num包通知一次, 用来调节速度和可靠性之间的平衡
  /// @param num  app每发num包, 固件回应一次
  /// @return:
  /// SUCCESS(0) : 成功
  int tranDataSetPRN(
    int num,
  ) {
    return _tranDataSetPRN(
      num,
    );
  }

  late final _tranDataSetPRNPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>('tranDataSetPRN');
  late final _tranDataSetPRN =
      _tranDataSetPRNPtr.asFunction<int Function(int)>();

  /// ------------------------------ SPP文件传输功能 ------------------------------
  /// /**
  ///  * @brief 开始传输数据
  ///  * @return
  ///  *   SUCCESS(0) : 成功
  ///  */
  int sppTranDataStart() {
    return _sppTranDataStart();
  }

  late final _sppTranDataStartPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('sppTranDataStart');
  late final _sppTranDataStart =
      _sppTranDataStartPtr.asFunction<int Function()>();

  /// @brief 开始传输数据, 且设置续传次数
  /// @param times 续传次数
  /// @return
  /// SUCCESS(0) : 成功
  int sppTranDataStartWithTryTime(
    int times,
  ) {
    return _sppTranDataStartWithTryTime(
      times,
    );
  }

  late final _sppTranDataStartWithTryTimePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
          'sppTranDataStartWithTryTime');
  late final _sppTranDataStartWithTryTime =
      _sppTranDataStartWithTryTimePtr.asFunction<int Function(int)>();

  /// @brief:停止spp传输数据(无效,使用sppTranDataManualStop)
  /// @return
  /// SUCCESS:成功
  int sppTranDataStop() {
    return _sppTranDataStop();
  }

  late final _sppTranDataStopPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('sppTranDataStop');
  late final _sppTranDataStop =
      _sppTranDataStopPtr.asFunction<int Function()>();

  /// @brief:手动停止spp传输数据
  /// @return:
  /// SUCCESS:成功
  int sppTranDataManualStop() {
    return _sppTranDataManualStop();
  }

  late final _sppTranDataManualStopPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('sppTranDataManualStop');
  late final _sppTranDataManualStop =
      _sppTranDataManualStopPtr.asFunction<int Function()>();

  /// @brief:获取传输状态
  /// @return:
  /// {true(1) : 传输已开启
  /// false(0) : 传输未开启}
  int sppTranDataisStart() {
    return _sppTranDataisStart();
  }

  late final _sppTranDataisStartPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('sppTranDataisStart');
  late final _sppTranDataisStart =
      _sppTranDataisStartPtr.asFunction<int Function()>();

  /// @brief SPP设置文件传输Buff version_date:1.0.1.1后取消该方法，使用sppTranDataSetBuffByPath配置文件
  /// @param data 文件的字节流
  /// @param dataType 文件类型
  /// @param dataLen 字节流大小
  /// {0 无效
  /// 1 分区表
  /// 2 apgs文件
  /// 3 gps固件}
  /// @param fileName 文件名+后缀, 注:文件名可以是空但是后缀不能为空(排除掉某些固定名称的文件例如:EPO.DAT)
  /// @param compressionType 压缩类型
  /// {0 为不适用压缩
  /// 1 为zlib压缩
  /// 2 为fastlz压缩}
  /// @param  oriSize 压缩前文件大小
  /// {目前对表盘文件有效，表示没有压缩前的文件大小，即iwf文件大小}
  /// 如果需要传递文件名 ，dataType需要使用0xff,如果是传递agps，两个分部填""和0就可以了
  /// @return SUCCESS(0) 成功
  int sppTranDataSetBuff(
    ffi.Pointer<ffi.Char> data,
    int dataType,
    int dataLen,
    ffi.Pointer<ffi.Char> fileName,
    int compressionType,
    int oriSize,
  ) {
    return _sppTranDataSetBuff(
      data,
      dataType,
      dataLen,
      fileName,
      compressionType,
      oriSize,
    );
  }

  late final _sppTranDataSetBuffPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Int, ffi.Int,
              ffi.Pointer<ffi.Char>, ffi.Int, ffi.Int)>>('sppTranDataSetBuff');
  late final _sppTranDataSetBuff = _sppTranDataSetBuffPtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Char>, int, int, ffi.Pointer<ffi.Char>, int, int)>();
